--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,26 @@
     --background: #171717;
     --plain-font: whitesmoke;
     --card: #1D1D1D;
+    --gradient-font: linear-gradient(to left, turquoise, steelblue, rebeccapurple);
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+    background-image: linear-gradient(to bottom, turquoise, steelblue, rebeccapurple);
+    transition: all .4s ease;
+}
+
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to bottom, turquoise, steelblue, rebeccapurple);
+    border-radius: 4px;
+    width: 4px;
+    transition: all .4s ease;
+}
+
+::-webkit-scrollbar-track {
+    background: #101010;
+    border-radius: 4px;
+    width: 4px;
 }
 
 body {
@@ -20,12 +40,7 @@ a {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    color: #171717;
-}
-
-.container {
-    width: auto;
-    margin: auto;
+    color: var(--background);
 }
 
 header .logo {
@@ -41,90 +56,52 @@ header .logo {
     opacity: 0.1;
 }
 
-.section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.page-title {
+    text-transform: capitalize;
 }
 
-.section h2 {
-    text-align: center;
+.container {
+    width: 100%;
+    font-family: 'Abel', sans-serif;
+    font-size: 1.5rem;
 }
 
-.project-sections {
-    width: 45vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    flex-wrap: wrap;
-    height: auto;
+.project-section a {
+    border: none;
+
+    background-image: linear-gradient(to left, turquoise, steelblue, rebeccapurple);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: var(--background);
+
+    margin-top: 5%;
+    padding: 20px;    
 }
 
-.project-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-width: 180px;
-    height: 180px;
-    border-radius: 10px;
-    background-color: var(--card);
-    margin: 2%;
+.project-section a:hover {
+    transform: scale(1.5);
+    transition: all 0.8s ease;
+}
+  
+.developer {
+    text-transform: lowercase;
+    font-family: 'Style Script', cursive;
+    font-size: xx-large;
+    margin-bottom: 5%;    
 }
 
-.link-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.project-section img {
-    width: 55px;
-    height: 65px;
-}
-
-.project-section p {
-    text-align: center;
-    margin-top: 25px;
-}
-
-footer {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    height: 9vh;
-}
-
-footer a:hover {
-    transform: scale(1.15);
+.developer:hover {
+    transform: scale(1.5);
     transition: all .5s ease;
 }
 
-@media (max-width: 420px) {
-
-    .container {
-        padding: 5px;
+@media only screen and (max-width: 600px) {
+    .logo h2 {
+        font-size: 1.5rem;
     }
 
     .project-sections {
-        width: 95vw;
-        flex-wrap: wrap;
-        font-size: 0.8rem;
-    }
-
-    .project-section {
-        margin-top: 10px;
-        min-width: 30vw;
-        max-width: 30vw;
-        max-height: 15vh;
-        min-height: 15vh;
-        padding: 15px;
-    }
-
-    .project-section img {
-        width: 25px;
-        height: 35px;
+        flex-direction: column;
     }
 }
